testsuite/tests/typecheck/should_fail/T18714.stderr

T18714.hs:11:14: error:
    • Illegal constraint in a kind: forall a. Show a => a -> a
    • In the first argument of ‘Id’, namely
        ‘(Any :: forall a. Show a => a -> a)’
      In the type ‘Id (Any :: forall a. Show a => a -> a)’
      In the type declaration for ‘F’
